--- a/helm-app/templates/04-frontend.yaml
+++ b/helm-app/templates/04-frontend.yaml
@@ -1,40 +1,38 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: api-gateway
-  namespace: key-store
+  name: frontend
+  namespace: {{.Values.tenantName}}
 spec:
   selector:
-    app: api-gateway
+    app: frontend
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 3000
-      nodePort: 32000
-  type: NodePort
+      targetPort: 8080
+  type: ClusterIP
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: api-gateway
-  namespace: key-store
+  name: frontend
+  namespace: {{.Values.tenantName}}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: api-gateway
+      app: frontend
   template:
     metadata:
       labels:
-        app: api-gateway
+        app: frontend
     spec:
-      serviceAccountName: key-store-sa
+      serviceAccountName: {{.Values.tenantName}}-sa
       containers:
-        - name: api-gateway
-          image: "{{.Values.apiGatewayImage.repository}}:{{.Values.apiGatewayImage.tag}}"
-          imagePullPolicy: {{.Values.apiGatewayImage.pullPolicy}}
+        - name: frontend
+          image: bennimoser/k8s-multi-tenant-frontend
           ports:
-            - containerPort: 3000
+            - containerPort: 8080
           envFrom:
             - configMapRef:
                 name: key-store-config
