--- a/helm-app/templates/06-inventory-service.yaml
+++ b/helm-app/templates/06-inventory-service.yaml
@@ -1,38 +1,38 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: order-service
-  namespace: key-store
+  name: inventory-service
+  namespace: {{.Values.tenantName}}
 spec:
   selector:
-    app: order-service
+    app: inventory-service
   ports:
     - protocol: TCP
-      port: 8081
-      targetPort: 8085
+      port: 8082
+      targetPort: 8080
   type: ClusterIP
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: order-service
-  namespace: key-store
+  name: inventory-service
+  namespace: {{.Values.tenantName}}
 spec:
-  replicas: {{.Values.replicaCount}}
+  replicas: 1
   selector:
     matchLabels:
-      app: order-service
+      app: inventory-service
   template:
     metadata:
       labels:
-        app: order-service
+        app: inventory-service
     spec:
-      serviceAccountName: key-store-sa
+      serviceAccountName: {{.Values.tenantName}}-sa
       containers:
-        - name: order-service
-          image: phwildzeiss/order-service:0.0.7
+        - name: inventory-service
+          image: bennimoser/k8s-multi-tenant-inventory
           ports:
-            - containerPort: 8085
+            - containerPort: 8080
           envFrom:
             - configMapRef:
                 name: key-store-config
