add: secretRef for db secrets

--- a/helm-app/templates/05-order-service.yaml
+++ b/helm-app/templates/05-order-service.yaml
@@ -38,6 +38,8 @@ spec:
                 name: key-store-config
             - secretRef:
                 name: key-store-secret
+            - secretRef:
+                name: {{.Values.tenantName}}-db-secret
           resources:
             requests:
               memory: "{{.Values.resources.requests.memory}}"
