--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -47,10 +47,10 @@ jobs:
         run: terraform fmt -check
         working-directory: terraform/
 
-      - name: Terraform Plan
-        id: plan
-        run: terraform plan -out=tfplan
-        working-directory: terraform/
+      # - name: Terraform Plan
+      #   id: plan
+      #   run: terraform plan -out=tfplan
+      #   working-directory: terraform/
 
       - name: Apply Cluster (Phase 1)
         run: terraform apply -target=exoscale_sks_cluster.my_sks_cluster -auto-approve
