--- a/helm-app/templates/07-ingress.yaml
+++ b/helm-app/templates/07-ingress.yaml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     # nginx.ingress.kubernetes.io/auth-url: "http://$host/oauth2/auth"
     # nginx.ingress.kubernetes.io/auth-signin: "http://$host/oauth2/start?rd=$escaped_request_uri"
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    # nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   ingressClassName: nginx
   rules:
