--- a/helm-app/templates/07-ingress.yaml
+++ b/helm-app/templates/07-ingress.yaml
@@ -7,13 +7,14 @@ metadata:
     # nginx.ingress.kubernetes.io/auth-url: "http://$host/oauth2/auth"
     # nginx.ingress.kubernetes.io/auth-signin: "http://$host/oauth2/start?rd=$escaped_request_uri"
     nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   ingressClassName: nginx
   rules:
   - http:
       paths:
       - path: "/{{.Values.tenantName}}(/|$)(.*)"
-        pathType: Prefix
+        pathType: ImplementationSpecific
         backend:
           service:
             name: frontend
