--- a/helm-app/templates/07-ingress.yaml
+++ b/helm-app/templates/07-ingress.yaml
@@ -12,7 +12,7 @@ spec:
   - http:
       paths:
       - path: "/{{.Values.tenantName}}"
-        pathType: prefix
+        pathType: Prefix
         backend:
           service:
             name: frontend
