--- a/helm-app/templates/07-ingress.yaml
+++ b/helm-app/templates/07-ingress.yaml
@@ -4,12 +4,13 @@ metadata:
   name: {{.Values.tenantName}}-ingress
   namespace: {{.Values.tenantName}}
   annotations:
-    # nginx.ingress.kubernetes.io/auth-url: "http://$host/oauth2/auth"
-    # nginx.ingress.kubernetes.io/auth-signin: "http://$host/oauth2/start?rd=$escaped_request_uri"
+    nginx.ingress.kubernetes.io/auth-url: "http://$host/oauth2/auth"
+    nginx.ingress.kubernetes.io/auth-signin: "http://$host/oauth2/start?rd=$escaped_request_uri"
 spec:
   ingressClassName: nginx
   rules:
-  - http:
+  - host: fhb-key.store
+    http:
       paths:
       - path: "/{{.Values.tenantName}}"
         pathType: Prefix
