--- a/argocd/applicationset-tenants.yaml
+++ b/argocd/applicationset-tenants.yaml
@@ -15,7 +15,7 @@ spec:
     metadata:
       name: '{{path.basename}}-app'
       annotations:
-        argocd-image-updater.argoproj.io/image-list: frontend=docker.io/phwildzeiss/k8s-multi-tenant-frontend, inventory=docker.io/phwildzeiss/k8s-multi-tenant-inventory, order=docker.io/phwildzeiss/k8s-multi-tenant-order-service
+        argocd-image-updater.argoproj.io/image-list: frontend=docker.io/bennimoser/k8s-multi-tenant-frontend, inventory=docker.io/bennimoser/k8s-multi-tenant-inventory, order=docker.io/bennimoser/k8s-multi-tenant-order-service
         argocd-image-updater.argoproj.io/frontend.helm.image-name: images.frontend.repository
         argocd-image-updater.argoproj.io/frontend.helm.image-tag: images.frontend.tag
         argocd-image-updater.argoproj.io/frontend.update-strategy: newest-build
@@ -36,8 +36,7 @@ spec:
         path: helm-app                          # Chart-Verzeichnis
         helm:
           valueFiles:
-            - '../tenants/{{path.basename}}/values.yaml'            # Tenant-spezifische Werte
-          parameters: []
+            - '../{{path}}/values.yaml'            # Tenant-spezifische Werte
       destination:
         server: https://kubernetes.default.svc
         namespace: '{{path.basename}}'          # z. B. tenant-a
